Admin module alignment fixes
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@13213 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/bluestork/css/template.css
+++ b/administrator/templates/bluestork/css/template.css
@@ -197,7 +197,9 @@ span.writable { color:green; }
 span.unwritable { color:red; }
 p.noparams { padding: 20px 15px;}
 
-.adminlist-searchstatus a {
+p.noresults { padding: 20px 15px;}
+
+archstatus a {
 	padding-left: 20px;
 }
 
